[build-system]
requires = [
    "setuptools==63.0.0b1",  # https://discuss.python.org/t/help-testing-pep-660-support-in-setuptools/16904
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "python-sdk"
description = "Python Software Dev Kit"
authors = [{name = "lijok", email = "lijok@pm.me"}]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = []
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
#    "Programming Language :: Python :: Implementation :: PyPy",  # TODO(lijok): enable this one once we add PyPy support
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
    "Typing :: Typed"
]

[project.urls]
"Homepage" = "https://github.com/lijok/python-sdk"
"Source Code" = "https://github.com/lijok/python-sdk"
"Documentation" = "https://github.com/lijok/python-sdk/docs"
"Changelog" = "https://github.com/lijok/python-sdk/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/lijok/python-sdk/issues"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
]

test = [
    "black",
    "isort",
    "hypothesis",
    "pytest",
    "pytest-asyncio",
]

hashing = [
    "argon2-cffi>=21.3"
]

secrets = [
    "boto3>=1.24"
]

[project.scripts]
python-sdk = "python_sdk._cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "python_sdk.__version__.__version__"}

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
# -ra adds a short summary of all test outcomes aside from passed
# --durations 10 adds a short summary of slowest 10 tests
# --new-first runs tests on new files first
# --basetemp .test_artifacts sets the path that the tmp_path fixture will store files in
addopts = "-vv -ra --durations 10 --new-first --basetemp .test_artifacts"
asyncio_mode = "auto"
