[build-system]
requires = [
    "setuptools>=65.5.1",
    "wheel>=0.38.4",
]
build-backend = "setuptools.build_meta"

[project]
name = "pythonsdk"
description = "Python Software Dev Kit"
authors = [{name = "lijok", email = "lijok@pm.me"}]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = []
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
"Homepage" = "https://github.com/lijok/python-sdk"
"Source Code" = "https://github.com/lijok/python-sdk"
"Documentation" = "https://github.com/lijok/python-sdk/docs"
"Changelog" = "https://github.com/lijok/python-sdk/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/lijok/python-sdk/issues"

[project.optional-dependencies]
dev = [
    "build>=0.8.0",
    "twine>=4.0.1",
    "hypothesis>=6.54.0",
    "pytest>=7.1.3",
    "pytest-asyncio>=0.19.0",
]

aws = [
    "boto3>=1.24"
]

testing = [
    "black>=22.10.0",
    "isort>=5.10.1",
    "mypy>=0.982",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
python_sdk = ["py.typed", "version"]

[tool.setuptools.dynamic]
version = {file = "version"}

[tool.pytest.ini_options]
# -ra adds a short summary of all test outcomes aside from passed
# --string-markers errors if unknown markers are used
# --strict-config errors if any warnings are encountered in this config
# --durations 10 adds a short summary of slowest 10 tests
# --new-first runs tests on new files first
# --basetemp .test_artifacts sets the path that the tmp_path fixture will store files in
addopts = "-vv -ra --strict-markers --strict-config --durations 10 --new-first --basetemp .test_artifacts"
asyncio_mode = "auto"
